# boiling-sim

./: .dockerignore  .gitignore  BoilingSim_Portfolio_Review_Notes.md  BoilingSim_Publication_Portfolio_v2.docx  BoilingSim_Publication_Portfolio_v2.md  Cargo.toml  DEPLOYMENT.md  Dockerfile.runpod  Dockerfile.solver  Dockerfile.web  Dockerfile.wsserver  GETTING_STARTED.md  PIPELINE.md  README.md  docker-compose.yml  multiphysics_boiling_developer_guide.md  multiphysics_boiling_simulation_plan.docx  package.json  proposal.md  proposal_appendix_cv.md  proposal_appendix_refs.md  pyproject.toml  rust-toolchain.toml
.github/workflows/: build-runpod.yml
benchmarks/: baseline.md  baseline_R_pre_m3.npy  baseline_t_pre_m3.npy  phase2_heating.md  phase2_heating_onb_summary.md  phase3_boiling.md  phase4_retention.md  phase4_retention_similar_report.md  phase5_phase6_implementation_report.md  phase6_dashboard.md  profile_step_breakdown.csv  profile_step_breakdown_p50.csv  runs.md
benchmarks/phase5_pre_baseline/: aluminum_M3_coalesced.csv  aluminum_dx2mm_iter200.csv  aluminum_phase56_bothflags.csv  aluminum_phase57_bothflags.csv  copper_M3_coalesced.csv  copper_dx2mm_iter200.csv  copper_phase56_bothflags.csv  copper_phase57_bothflags.csv  steel_204_dx2mm_iter200.csv  steel_M2_naive_rust.csv  steel_M3_baseline_for_55.csv  steel_M3_coalesced_final.csv  steel_M3_coalesced_rust.csv  steel_M3_fma_on_rust.csv  steel_M3_fused_rust.csv  steel_M3_tiled_rust.csv  steel_M55_final.csv  steel_M55_lever1_TILEK32.csv  steel_M55_lever2_launchbounds.csv  steel_M55_lever3_block1024.csv  steel_phase56_bothflags.csv  steel_phase56_pressure_only.csv  steel_phase56_warp_only.csv  steel_phase57_bothflags.csv  steel_phase6_pcg.csv
configs/scenarios/: aluminum.yaml  boiling_q10.yaml  boiling_q20.yaml  boiling_q40.yaml  boiling_q50.yaml  cns_demo.yaml  cns_q30.yaml  cns_q90.yaml  copper.yaml  default.yaml  dual_solute_25mm.yaml  household_boil.yaml  simmer.yaml  single_carrot.yaml  vitamin_c_25mm.yaml  vitamin_c_25mm_vieira.yaml  vitamin_c_sonar_5to1.yaml
crates/cuda-kernels/: Cargo.toml  build.rs
crates/cuda-kernels/include/: bubble.h
crates/cuda-kernels/src/: axpy_device.cu  diag_inverse_apply.cu  dot_reduce.cu  jacobi_pressure.cu  laplacian_spmv.cu  lib.rs  pressure_solve_pcg.cu  reduce_water_alpha.cu  scale.cu  scatter_latent_heat.cu  scatter_momentum.cu  update_bubbles.cu  vector_add.cu
crates/sim-core/: Cargo.toml
crates/sim-core/src/: cuda.rs  lib.rs  props.rs
crates/ws-server/: Cargo.toml
crates/ws-server/src/: app.rs  control.rs  control_forward.rs  ingest.rs  lib.rs  main.rs  runs.rs  snapshot.rs  ws.rs
crates/ws-server/tests/: python_snapshot.rs  runs_endpoints.rs  ws_roundtrip.rs
data/: materials.json
python/boilingsim/: __init__.py  boiling.py  config.py  dashboard.py  fluid.py  geometry.py  json_hash_comments.py  nutrient.py  pipeline.py  run_writer.py  scenario.py  thermal.py
python/sim_core/: __init__.py  sim_core.cp311-win_amd64.pyd
python/tests/: test_boiling.py  test_config.py  test_dashboard_integration.py  test_dashboard_producer.py  test_fluid.py  test_geometry.py  test_nutrient.py  test_pressure_cg.py  test_pressure_parity.py  test_run_dashboard_controls.py  test_run_writer.py  test_scatter_parity.py  test_sim_core_cuda_poc.py  test_sim_core_props.py  test_smoke.py  test_thermal.py  test_update_bubbles_parity.py
runpod/: README.md  nginx.runpod.conf  precompile_warp.py  supervisord.conf
scripts/: activate_dev_env.ps1  analyze_q_sweep.py  bootstrap.ps1  bootstrap.sh  capture_sample_snapshot.py  cns_sweep.sh  dashboard_precheck.sh  debug_convection_plume.py  debug_radial_T_profile.py  debug_sdf_slice.py  profile_step.py  reanalyze_heating_onb.py  run_boiling.py  run_dashboard.py  run_heating.py  run_retention.py  setup_windows_env.ps1  setup_wsl_env.sh
web/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  main.tsx  share.test.ts  share.ts
web/src/components/: BoilingScene.tsx  Bubbles.tsx  CarrotMesh.tsx  ControlPanel.tsx  GradientBackground.tsx  IdleBanner.tsx  Pot.tsx  RebuildBanner.tsx  SceneOverlay.tsx  StatusIndicator.tsx  Stove.tsx  TimeSeriesPanel.tsx  TopBar.tsx  WaterVolume.test.ts  WaterVolume.tsx
web/src/hooks/: useChartExport.ts  usePage.test.ts  usePage.ts  useRunArtefacts.test.ts  useRunArtefacts.ts  useSnapshot.ts  useTokenColor.ts
web/src/pages/: ConfigPage.tsx  LivePage.tsx  ResultsPage.tsx
web/src/styles/: app.css  (+1 more)
(+21 files in other folders)
