[workspace]
resolver = "2"
members = ["crates/sim-core", "crates/cuda-kernels", "crates/ws-server"]

[workspace.dependencies]
cudarc = { version = "0.12", features = ["cuda-12060"] }
libloading = "0.8"
pyo3 = { version = "0.22", features = ["extension-module"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
rmp-serde = "1"
zstd = "0.13"
anyhow = "1"
thiserror = "1"
cc = "1"
bytes = "1"
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
