[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "boilingsim"
version = "0.1.0"
description = "Multiphysics 3D boiling simulation with GPU-accelerated coupled thermal, fluid, and nutrient retention modeling"
requires-python = ">=3.11,<3.13"
dependencies = [
    "warp-lang[examples]",
    "numpy",
    "scipy",
    "matplotlib",
    "h5py",
    "pyvista",
    "trimesh",
    "pygmsh",
    "meshio",
    "usd-core",
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "zstandard",
    "msgpack",
    "pyyaml",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-benchmark",
    "ruff",
]
dashboard = [
    "msgpack",
]

[project.scripts]
boiling-sim-scenario = "boilingsim.scenario:main"

# Maturin builds the Rust extension `sim_core` (from crates/sim-core) and
# installs it alongside the pure-Python `boilingsim` package living under
# `python/`. The combined wheel ships both. Importing `sim_core` works at
# top level (`from sim_core.props import MaterialProps`); `boilingsim` keeps
# its existing import path.
#
# Cargo workspace lives at repo root; `manifest-path` points at the sim-core
# crate specifically. cudarc + pyo3 dependencies flow in via the workspace.
[tool.maturin]
manifest-path = "crates/sim-core/Cargo.toml"
python-source = "python"
module-name = "sim_core"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
pythonpath = ["python"]
markers = [
    "cuda_required: marks tests that require a CUDA device and the Rust sim_core.cuda submodule (skipped on CPU-only machines)",
]
