[package]
name = "sim-core"
version = "0.1.0"
edition = "2021"

[dependencies]
cudarc = { workspace = true }
pyo3 = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Phase 5: hand-written CUDA kernels live here.
cuda-kernels = { path = "../cuda-kernels" }

[lib]
name = "sim_core"
crate-type = ["cdylib", "rlib"]
